--- a/service.html
+++ b/service.html
@@ -33,10 +33,10 @@
     <main style="padding: 40px;">
         <section style="margin-bottom: 40px;">
             
-            <p>
-                JAPS3 is your trusted partner for a wide range of services, catering to various domains. Our team of experts is committed to delivering exceptional results for every project we undertake. Below are some of the key services we offer:
+            <p style="font-size: 22px; font-weight: bold; color: white;">
+                JAPS 3 is your trusted partner for a wide range of services, catering to various domains. Our team of experts is committed to delivering exceptional results for every project we undertake. Below are some of the key services we offer:
             </p>
-            <ul>
+            <ul style="font-size: 20px; color: white;">
                 <li>IT Projects in various domains</li>
                 <li>Cloud Solutions and Implementations</li>
                 <li>Cybersecurity Services and Risk Assessment</li>
@@ -47,7 +47,7 @@
                 <li>MBA and BBA Projects and Assessments</li>
                 <!-- Add more services as needed -->
             </ul>
-            <p>
+            <p style="font-size: 20px; font-weight: bold; color: white;">
                 Whether you are a student seeking project assistance or a business in need of technical expertise, we have got you covered. Our team is well-equipped to handle diverse challenges and deliver top-notch results within your specified timeframes.
             </p>
         </section>
@@ -57,8 +57,9 @@
     <footer style="padding: 20px; background-color: #191a1c; color: #fff; text-align: center;">
         <p>Contact us today to discuss your project requirements:</p>
         <ul>
-            <li>Email: info@japs3.com</li>
-            <li>Phone: +1-123-456-7890</li>
+            <li>Email: japs3.tech@gmail.com</li>
+            <li>Email: japs3@japs3.tech</li>
+            <li>Phone: +919234613384</li>
             <li>Journey to awesome platform for secure scalable solutions</li>
             <!-- Add more contact information as needed -->
         </ul>
