--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
        About Us
     </h1>
     <figure>
-      <img src="images/JAPS3.with background png.png" alt="JAPS3" style="width: 140px; height: 145px;">
+      <img src="images/A1.jpeg" alt="JAPS3" style="width: 140px; height: 145px;">
     </figure>
 
     <h2 style="font-size: 22px; font-weight: bold; color: rgb(255, 255, 255);">Info</h2>
