--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@ Your ultimate destination for academic success!
       <div class="employee">
         <img src="images/jaggu.jpeg" alt="Employee 2">
         <h3>Jagath</h3>
-        <p>Backend Developer</p>
-        <p>Adaptable Backend Developer with expertise in C, C++, Java, Python, and more. Committed to empowering
-          students and sharing insights to foster excellence.</p>
+        <p>Cloud Developer</p>
+        <p>"Cloud Developer with expertise in AWS, Cybersecurity and more. Committed to empowering students and sharing insights to foster excellence".</p>
       </div>
       <div class="employee">
         <img src="images/poki.jpeg" alt="Employee 1">
