--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@ Your ultimate destination for academic success!
     <h2>Meet Our Team</h2>
     <div class="employee-container">
       <div class="employee">
+        <img src="images/Dinesh sir.jpeg" alt="Employee 1">
+        <h3>Dinesh Yadav</h3>
+        <p>Skill Development and Employment Specialist</p>
+        <p>Mr. Dinesh is hardworking and dedicated towards his work, whether it is small or big. He came from a below-middle class family and his father was a school teacher. With his vast experience and knowledge of skill development, he transformed many lives of young people and women by identifying their hidden talent and provides the potential skill of the person. After providing training with that concern lead trainers, he helped in getting a good employment on that skill. In his 12 years of experience he worked in various multinational companies and in Skill Development organizations. He provided employment opportunities to more than 2000 people in his career. His hobbies are travelling to various places in India and interacting with local people and understanding the local situation and problems and trying to resolve them by escalating the issues with concerned authorities and follow up with them till it got resolved. His strengths are emotions and will not leave anyone in the middle once anyone reaches out for his help. He is a mentor for many college students and young people and his notable skills are good orator, public speaking skills and a motivational trainer.</p>
+      </div>
+      
+      <div class="employee">
         <img src="images/Kiddo.jpeg" alt="Employee 1">
         <h3>Jyothi</h3>
         <p>Cloud Developer</p>
