--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       <li>Email: japs3.tech@gmail.com</li>
       <li>Email: japs3@japs3.tech</li>
       <li>Follow our Instagram page for more updates: japs3_Official</li>
-      <li>WhatsApp/Call/Message: +919234613384</li>
+      <li>WhatsApp/Call/Message: +919234613384, +917004751093 </li>
     </ul>
   </main>
 
