--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Your ultimate destination for academic success!
 
       <div class="employee">
         <img src="images/file (1).enc" alt="Employee 2">
-        <h3>Aman</h3>
+        <h3>Aman Raj</h3>
         <p>Ethical Hacker</p>
         <p>Experienced Cybersecurity expert with Linux and Networking proficiency. Dedicated to supporting students in
           the field, leveraging expertise to assist aspiring IT professionals.</p>
